# openapi.json
@@ -3531,6 +3531,24 @@
                             "PHRASE"
                         ]
                     },
+                    "wordTypes": {
+                        "type": [
+                            "array",
+                            "null"
+                        ],
+                        "items": {
+                            "type": "string",
+                            "description": "Type of word or expression",
+                            "enum": [
+                                "NOUN",
+                                "VERB",
+                                "ADJECTIVE",
+                                "ADVERB",
+                                "IDIOM",
+                                "PHRASE"
+                            ]
+                        }
+                    },
                     "hasProgress": {
                         "type": [
                             "boolean",
@@ -3555,6 +3573,28 @@
                             "COLLOQUIAL",
                             "POETIC"
                         ]
+                    },
+                    "wordExtraMarks": {
+                        "type": [
+                            "array",
+                            "null"
+                        ],
+                        "items": {
+                            "type": "string",
+                            "description": "Extra marks or tags for word classification by register or domain",
+                            "enum": [
+                                "OFFENSIVE",
+                                "SLANG",
+                                "FORMAL",
+                                "INFORMAL",
+                                "SCIENTIFIC",
+                                "TECHNICAL",
+                                "LEGAL",
+                                "MEDICAL",
+                                "COLLOQUIAL",
+                                "POETIC"
+                            ]
+                        }
                     },
                     "bookmarked": {
                         "type": [
